--- a/flowallet/src/main/java/wallettemplate/utils/flo_address.fxml
+++ b/flowallet/src/main/java/wallettemplate/utils/flo_address.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<fx:root type="javafx.scene.layout.AnchorPane" prefWidth="441.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" style="" prefWidth="441.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="wallettemplate.ReceiveMoneyController">
   <children>
-    <HBox id="addressLabelBox" fx:id="box" alignment="CENTER_LEFT" layoutX="0.0" layoutY="0.0" prefHeight="21.0" prefWidth="391.0" spacing="10.0">
+    <HBox id="addressLabelBox" fx:id="box" alignment="CENTER_LEFT" layoutX="20.0" layoutY="20.0" prefHeight="21.0" prefWidth="391.0" spacing="10.0">
       <children>
-        <Label fx:id="addressLabel" onMouseClicked="#requestMoney" style="-fx-cursor: hand" text="&lt;address goes here&gt;" textFill="BLUE" underline="true">
+        <Label fx:id="addressLabel" onMouseClicked="#requestMoney" style="-fx-cursor: hand" text="&lt;address goes here&gt;" textFill="BLACK" underline="true">
           <contextMenu>
             <ContextMenu fx:id="addressMenu">
               <items>
@@ -31,4 +31,4 @@
       </children>
     </HBox>
   </children>
-</fx:root>
+</AnchorPane>
