--- a/flowallet/src/main/java/wallettemplate/main.fxml
+++ b/flowallet/src/main/java/wallettemplate/main.fxml
@@ -35,70 +35,7 @@
         <Label font="$x1" text="FLO" textFill="$x2" />
       </children>
     </HBox>
-	
-	<ImageView fitHeight="50.0" fitWidth="243.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="300.0" AnchorPane.rightAnchor="200.0">
-      <image>
-        <Image url="@cowork.png" />
-      </image>
-      <TooltipUtil.tooltip>
-         <Tooltip text="Co-Working" />
-      </TooltipUtil.tooltip>
-    </ImageView>
-    
-    <ImageView fitHeight="70.0" fitWidth="243.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="285.0" AnchorPane.rightAnchor="110.0">
-      <image>
-        <Image url="@realestate.jpg" />
-      </image>
-      <TooltipUtil.tooltip>
-         <Tooltip text="Invest in Real-Estate" />
-      </TooltipUtil.tooltip>
-    </ImageView>
-    
-    <ImageView fitHeight="60.0" fitWidth="243.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="285.0" AnchorPane.rightAnchor="30.0">
-      <image>
-        <Image url="@arttoken.jpg" />
-      </image>
-      <TooltipUtil.tooltip>
-         <Tooltip text="get Art Tokens" />
-      </TooltipUtil.tooltip>      
-    </ImageView>
-
-	<ImageView fitHeight="100.0" fitWidth="400.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="170.0" AnchorPane.rightAnchor="80.0">
-      <image>
-        <Image url="@bali.jpg" />
-      </image>
-      <TooltipUtil.tooltip>
-         <Tooltip text="Travel to Bali" />
-      </TooltipUtil.tooltip>
-    </ImageView>
-    
-    <ImageView fitHeight="60.0" fitWidth="243.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="200.0">
-      <image>
-        <Image url="@getfunded.png" />
-      </image>
-      <TooltipUtil.tooltip>
-         <Tooltip text="Get Funded" />
-      </TooltipUtil.tooltip>
-    </ImageView>
-    
-    <ImageView fitHeight="50.0" fitWidth="243.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="120.0">
-      <image>
-        <Image url="@donateflo.png" />
-      </image>
-      <TooltipUtil.tooltip>
-         <Tooltip text="Donate FLO" />
-      </TooltipUtil.tooltip>
-    </ImageView>
-        
-    <ImageView fitHeight="50.0" fitWidth="243.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="40.0">
-      <image>
-        <Image url="@tshirt.png" />
-      </image>
-      <TooltipUtil.tooltip>
-         <Tooltip text="Buy Tshirt" />
-      </TooltipUtil.tooltip>
-    </ImageView>
-    
+	    
     <ImageView fitHeight="243.0" fitWidth="243.0" opacity="0.28" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-36.0" AnchorPane.rightAnchor="-34.0">
       <effect>
         <ColorAdjust>
@@ -159,7 +96,7 @@
                 <Tooltip text="sync status" />
             </TooltipUtil.tooltip>
     </ImageView>
-        
+     <Button fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#donateflo" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="Donate FLO" />
     <ClickableFLOAddress fx:id="addressControl" layoutY="45.0" prefHeight="21.0" prefWidth="391.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="195.0" />
     <StackPane layoutX="14.0" layoutY="81.0" prefHeight="249.0" prefWidth="250.0" style="-fx-border-color: white; -fx-border-style: dashed" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="80.0">
          <children>
@@ -168,8 +105,9 @@
     </StackPane>
     <HBox spacing="20" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="17.0">
        <children>
-           <Button id="sendMoneyOut" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#sendMoneyOut" style="-fx-base: blue; -fx-font-weight: bold" styleClass="fat-button" text="Send FLO" />
+           <Button id="sendMoneyOut" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#sendMoneyOut" style="-fx-base: rgb(102, 178, 255); -fx-font-weight: bold" styleClass="fat-button" text="Send FLO" />
            <Button id="receiveMoney" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#receiveMoney" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="Receive FLO" />
+           <Button id="balinights" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#balinights" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="Bali Nights" />
        </children>
     </HBox>
   </children>
