--- a/flowallet/src/main/java/wallettemplate/main.fxml
+++ b/flowallet/src/main/java/wallettemplate/main.fxml
@@ -88,7 +88,7 @@
             </TooltipUtil.tooltip>
     </ImageView>
     
-    <ImageView fitHeight="25.0" fitWidth="20.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0">
+    <ImageView id="refreshData" fitHeight="25.0" fitWidth="20.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0">
             <image>
                 <Image url="@sync.png"/>
             </image>
