--- a/flowallet/src/main/resources/fxml/main.fxml
+++ b/flowallet/src/main/resources/fxml/main.fxml
@@ -45,7 +45,7 @@
         </ColorAdjust>
       </effect>
       <image>
-        <Image url="@flo_logo_plain.png" />
+        <Image url="@../wallettemplate/flo_logo_plain.png" />
       </image>
     </ImageView>
     
@@ -58,26 +58,26 @@
         </ColorAdjust>
       </effect>
       <image>
-        <Image url="@200px-Padlock.svg.png" />
+        <Image url="@../wallettemplate/200px-Padlock.svg.png" />
       </image>
     </ImageView>
 
     <ImageView fitHeight="50.0" fitWidth="243.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="670.0">
       <image>
-        <Image url="@366PiWebLogo.png" />
+        <Image url="@../wallettemplate/366PiWebLogo.png" />
       </image>
     </ImageView>
     
     <ImageView fitHeight="500.0" fitWidth="280.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="130.0" AnchorPane.rightAnchor="10.0">
       <image>
-        <Image url="@Metro_ui.png"/>
+        <Image url="@../wallettemplate/Metro_ui.png"/>
       </image>
     </ImageView>
     
     <Button onAction="#settingsClicked" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="10.0" mnemonicParsing="false">
     	<graphic>
     		<ImageView fx:id="Setting" fitHeight="15.0" fitWidth="20.0" opacity="0.8" pickOnBounds="true" preserveRatio="true">
-     			<Image url="@settings.png" />
+     			<Image url="@../wallettemplate/settings.png" />
      		</ImageView>
     	</graphic>
     	<TooltipUtil.tooltip>
@@ -87,7 +87,7 @@
     
     <ImageView fitHeight="25.0" fitWidth="20.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="50.0">
             <image>
-                <Image url="@node.png"/>
+                <Image url="@../wallettemplate/node.png"/>
             </image>
             <TooltipUtil.tooltip>
                 <Tooltip text="nodes present" />
@@ -96,7 +96,7 @@
     
     <ImageView id="refreshData" fitHeight="25.0" fitWidth="20.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0">
             <image>
-                <Image url="@sync.png"/>
+                <Image url="@../wallettemplate/sync.png"/>
             </image>
             <TooltipUtil.tooltip>
                 <Tooltip text="Sync Completed" />
@@ -114,6 +114,7 @@
            <Button id="sendMoneyOut" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#sendMoneyOut" style="-fx-base: rgb(102, 178, 255); -fx-font-weight: bold" styleClass="fat-button" text="Send FLO" />
            <Button id="receiveMoney" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#receiveMoney" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="Receive FLO" />
            <Button id="donateflo" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#donateflo" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="Donate FLO" />
+           <!-- <Button id="baliNight" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#baliNight" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="Bali" /> -->
        </children>
     </HBox>
   </children>
