--- a/flowallet/src/main/java/wallettemplate/utils/flo_address.fxml
+++ b/flowallet/src/main/java/wallettemplate/utils/flo_address.fxml
@@ -32,7 +32,7 @@
         <Label fx:id="copyWidget" onMouseClicked="#copyWidgetClicked" text="COPY" />
         <Label fx:id="qrCode" onMouseClicked="#showQRCode" text="&lt;QR&gt;" />
       </children> 
-    <HBox alignment="CENTER_LEFT" spacing="15.0">
+    <!-- <HBox alignment="CENTER_LEFT" spacing="15.0">
         <children>
           <Label text="Email ID :">
             <font>
@@ -45,11 +45,11 @@
             </VBox.margin>
           </TextField>
         </children>
-     </HBox>
+     </HBox> -->
     
     <HBox alignment="CENTER_RIGHT" fillHeight="true" prefHeight="30.0" prefWidth="600.0" spacing="15.0" VBox.vgrow="NEVER">
           <children>
-            <Button fx:id="submitButton" mnemonicParsing="false" onAction="#handleSubmitButtonAction" prefWidth="79.0" text="send" />
+            <!-- <Button fx:id="submitButton" mnemonicParsing="false" onAction="#handleSubmitButtonAction" prefWidth="79.0" text="send" /> -->
             <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#cancel" prefWidth="79.0" text="cancel" />
           </children>
         </HBox>
