Added Installer for TestNet & MainNet

--- a/flowallet/src/main/java/wallettemplate/utils/donate_flo.fxml
+++ b/flowallet/src/main/java/wallettemplate/utils/donate_flo.fxml
@@ -33,7 +33,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-              <TextField fx:id="address" editable="false" maxWidth="1.7976931348623157E308" text="oXQjTAa1tL8MhXhga2xi9x851fuk1opZmp" HBox.hgrow="ALWAYS">
+              <TextField fx:id="address" editable="true" maxWidth="1.7976931348623157E308" promptText="oJZmzP8iLTHmx5VCRuAEBDaM4cUve4a1XM" HBox.hgrow="ALWAYS">
                 <VBox.margin>
                   <Insets />
                 </VBox.margin>
